methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
  while(!estSurBiscuit()){
  baisseBrosse();leveBrosse()
  if (isFacingTrail()) avance()
  else {gauche()
       if (isFacingTrail()) avance()
        else {droite();droite()}
       }
  }
  prendBiscuit()
  baisseBrosse()
     // Write your code here
 }

 // here comes your isFacingTrail method
def isFacingTrail():Boolean = {
  if (estFaceMur()) { return (false)}
  avance()
  if (getCouleurSol()==c) {recule();return (true)}
  else { recule();return false}
}